--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "id": "f6b9fcf0-d4d5-4a6f-88f2-1466aebb133c",
-    "version": "0.0.1",
-    "requiredApiVersion": "^1.4.0",
+    "version": "0.1.0",
+    "requiredApiVersion": "^1.19.0",
     "iconFile": "icon.png",
     "author": {
         "name": "yumenoshizuku",
@@ -14,16 +14,17 @@
     "description": "A command-line todo bot for Rocket.Chat",
     "permissions": [
         {
-            "name":"message.write"
+            "name": "message.write"
         },
         {
-            "name":"slashcommand"
+            "name": "slashcommand"
         },
         {
-            "name":"persistence"
+            "name": "persistence"
         },
         {
-            "name":"scheduler"
+            "name": "scheduler"
         }
-    ]
+    ],
+    "implements": []
 }
